Add Currency, and some modifications